# radio-tracker

./: .gitignore  BOM.xlsx  LICENSE  Pin Mapping.xlsx  Radio Tracker.atsln  beacon.brd  beacon.sch  radio-tracker.lbr  tracker.brd  tracker.sch
beacon/: beacon.componentinfo.xml  beacon.cproj  main.c
gimp-plugin/: .gitignore  CMakeLists.txt  go.mod  go.sum  main.go
gimp-plugin/plugin/: debug.go  exports.go  fileHandlers.go  main.go  param.go  procedure.go
gimp-plugin/plugin/eeprom/: block.go  header.go  main.go  pixel.go  procedure.go  sprite.go
gimp-plugin/plugin/gimp/: bufferedImage.go  image.go  layer.go
tracker/: main.c  tracker.componentinfo.xml  tracker.cproj
